--- a/src/app/pages/costos-anuales/costos-anuales.component.scss
+++ b/src/app/pages/costos-anuales/costos-anuales.component.scss
@@ -1,3 +1,10 @@
 // ::ng-deep .dx-data-grid-total-footer{
 //     display:none
 //   }
+
+::ng-deep .dx-toast-content {
+    min-width: 200px;
+    max-width: 400px;
+    font-weight: bold;
+    font-size: 14px;
+  }
