--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -73,32 +73,20 @@
 
             <br><br><br>
 
-            <!--==========================Line Chart==================-->
+            <!--==========================Bar and Line Chart==================-->
             <dx-chart id="chart" [dataSource]="costosTPSGrafica">
-                <dxi-series argumentField="udn" valueField="ingreso" name="Ingreso" type="bar" color="#ffaa66"></dxi-series>
-                <dxo-common-series-settings
-                  argumentField="state"
-                  type="bar"
-                  hoverMode="allArgumentPoints"
-                  selectionMode="allArgumentPoints"
-                >
-                <dxo-label
-                [visible]="true"
-                [format]="formatSliderTooltip"
-              >
-                  <!-- <dxo-label
-                    [visible]="true"
-                    [format]="{
-                      type: 'fixedPoint',
-                      precision: 2
-                    }"
-                  > -->
-                  </dxo-label>
-                </dxo-common-series-settings>
 
-                <dxi-series argumentField="udn" valueField="presupuesto" name="Presupuesto" type="line" color="violet"></dxi-series>
+                <dxi-series argumentField="udn" valueField="ingreso" name="Ingreso" type="bar" color="#363640">
+                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="inside"></dxo-label>
+                </dxi-series>
+
+                <dxi-series argumentField="udn" valueField="presupuesto" name="Presupuesto" type="line" color="#FA593F">
+                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="outside"></dxo-label>
+                </dxi-series>
+                
                 <dxo-export [enabled]="true"></dxo-export>
               </dx-chart>
+
             <!--====================================Finish chart==========-->
 
             <br><br><br>
