--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -77,11 +77,16 @@
             <dx-chart id="chart" [dataSource]="costosTPSGrafica">
 
                 <dxi-series argumentField="udn" valueField="ingreso" name="Ingreso" type="bar" color="#363640">
-                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="inside"></dxo-label>
+                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="inside">
+                        <dxo-font size="9"></dxo-font>
+                    </dxo-label>
                 </dxi-series>
 
-                <dxi-series argumentField="udn" valueField="presupuesto" name="Presupuesto" type="line" color="#FA593F">
-                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="outside"></dxo-label>
+                <dxi-series argumentField="udn" valueField="presupuesto" name="Presupuesto" type="bar" color="#FA593F">
+                    <dxo-label [visible]="true" [format]="formatSliderTooltip" position="outside">
+                        <dxo-font size="9"></dxo-font>
+                    </dxo-label>
+                    
                 </dxi-series>
                 
                 <dxo-title text="Ingreso">
@@ -96,7 +101,7 @@
             <br><br><br>
 
             <dx-tab-panel>
-                <dxi-item title="TPS Global">
+                <dxi-item title="GST Consolidado">
                     <dx-data-grid #rentGer id="gridContainer" [dataSource]="costosFTP" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPreparedTPS($event)">
                         <dxo-scrolling mode="virtual"></dxo-scrolling>
                         <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping>
@@ -160,6 +165,8 @@
                             <dxi-column dataField="gstGrupoMesPresupuesto" caption="MesPpto" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="gstGrupoMesDesviacion" caption="MesVar" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="gstGrupoMesPorDesv" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                        </dxi-column>
+                        <dxi-column caption="TOTAL ACUMULADO" headerCellTemplate="headerTemplate">
                             <dxi-column dataField="gstGrupoAcumuladoReal" caption="AcumReal" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="gstGrupoAcumuladoPresupuesto" caption="AcumPpto" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="gstGrupoAcumuladoDesviacion" caption="AcumVar" headerCellTemplate="headerTemplate"></dxi-column>
@@ -263,6 +270,8 @@
                             <dxi-column dataField="totalGrupoMesPresupuesto" caption="MesPpto" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoMesDesviacion" caption="MesVar" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoMesPorDesv" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                        </dxi-column>
+                        <dxi-column caption="TOTAL ACUMULADO" headerCellTemplate="headerTemplate">
                             <dxi-column dataField="totalGrupoAcumuladoReal" caption="AcumReal" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoAcumuladoPresupuesto" caption="AcumPpto" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoAcumuladoDesviacion" caption="AcumVar" headerCellTemplate="headerTemplate"></dxi-column>
@@ -324,11 +333,12 @@
                             <dxi-column dataField="totalGrupoMesPresupuesto" caption="MesPpto" eaderCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoMesDesviacion" caption="MesVar" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoMesPorDesv" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                        </dxi-column>
+                        <dxi-column caption="TOTAL ACUMULADO" headerCellTemplate="headerTemplate">
                             <dxi-column dataField="totalGrupoAcumuladoReal" caption="AcumReal" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoAcumuladoPresupuesto" caption="AcumPpto" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoAcumuladoDesviacion" caption="AcumVar" headerCellTemplate="headerTemplate"></dxi-column>
                             <dxi-column dataField="totalGrupoAcumuladoPorDesv" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
-                            
                         </dxi-column>
             
                         <div *dxTemplate="let data of 'headerTemplate'">
@@ -358,7 +368,7 @@
 
 
         </dxi-item>
-        <dxi-item title="Estado de Resultado">
+        <dxi-item title="ESTADO DE RESULTADOS">
             <br><br>
             <dx-responsive-box>
                 <!-- COLS -->
