--- a/src/app/pages/persmiso-bitacora/permiso-bitacora.component.html
+++ b/src/app/pages/persmiso-bitacora/permiso-bitacora.component.html
@@ -44,7 +44,7 @@
                 <dxi-item>
                     <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="usuarios" displayExpr="usuario" valueExpr="id" (onValueChanged)="selectUsuarios($event)">
+                    <dx-select-box [items]="tipoUsuario" displayExpr="tipousuario" valueExpr="id" (onValueChanged)="selectUsuarios($event)">
                     </dx-select-box>
                 </dxi-item>
                 <!-- TIPO -->
@@ -75,7 +75,7 @@
 
             <dx-tab-panel>
                 <dxi-item title="Potal GST">
-                    <dx-data-grid #rentGer id="gridContainer" [dataSource]="portalGST" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
+                    <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridPortalGST" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
                         <dxo-scrolling mode="virtual"></dxo-scrolling>
                         <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping> 
                         
@@ -103,7 +103,7 @@
                 </dxi-item>
 
                 <dxi-item title="Gerencial GST">
-                    <dx-data-grid #rentGer id="gridContainer" [dataSource]="gerencialGST" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
+                    <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridGerencialGST" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
                         <dxo-scrolling mode="virtual"></dxo-scrolling>
                         <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping> 
                         
@@ -186,7 +186,7 @@
                 <dxi-item>
                     <dxi-location screen="md lg" [row]="0" [col]="4"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="3" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="usuarios" displayExpr="usuario" valueExpr="id" (onValueChanged)="selectUsuarios($event)">
+                    <dx-select-box [items]="tipoUsuario" displayExpr="tipousuario" valueExpr="id" (onValueChanged)="selectUsuarios($event)">
                     </dx-select-box>
                 </dxi-item>
                 <!-- BUSCAR -->
@@ -202,13 +202,90 @@
             </dx-responsive-box>
             <br><br>
         
-            <dx-data-grid #rentGer id="gridContainer" [dataSource]="bitacora" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
+            <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridBitacora" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
                 <dxo-scrolling mode="virtual"></dxo-scrolling>
                 <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping> 
                 
                 <dxi-column dataField="" caption="Opción" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
                 <dxi-column dataField="" caption="Acción" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
                 <dxi-column dataField="" caption="Fecha" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+                    
+                <div *dxTemplate="let data of 'headerTemplate'">
+                    <div style="font-weight: bolder; color: black">
+                        {{ data.column.caption }}
+                    </div>
+                </div>
+                <div *dxTemplate="let info of 'titleHeaderTemplate'">
+                    <div style="font-weight: bolder; color: #ff5722">
+                        {{ info.column.caption }}
+                    </div>
+                </div>
+                <div *dxTemplate="let d of 'diffCellTemplate'" [class]="d.text >= 0 ? 'inc' : 'dec'">
+                    <div class="diff"></div>
+                </div>
+                <dxo-export [enabled]="true" fileName="TPS-Global"></dxo-export>
+                <dxo-paging [pageSize]="100"></dxo-paging>
+                <dxo-sorting mode="none"></dxo-sorting>
+            </dx-data-grid>
+
+        </dxi-item>
+        <dxi-item title="TIPOS DE USUARIO">
+            <br><br>
+            <dx-responsive-box>
+                <!-- COLS -->
+                <!-- <dxi-col [ratio]="1"></dxi-col> -->
+                <!--Portal-->
+                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]="1"></dxi-col>
+                <!--vacia-->
+                <dxi-col [ratio]=".15"></dxi-col>
+                <!--Buscar-->
+                <dxi-col [ratio]="1"></dxi-col>
+                <dxi-col [ratio]=".25"></dxi-col>
+        
+        
+                <!-- ROWS -->
+                <dxi-row [ratio]="1"></dxi-row>
+                <dxi-row [ratio]="1"></dxi-row>
+                <dxi-row [ratio]="1"></dxi-row>
+                <dxi-row [ratio]="1"></dxi-row>
+                <dxi-row [ratio]="1"></dxi-row>
+        
+                <!-- CONTROLES DEL FORM -->
+                <!--#region :::: ROW 1 DEL FORM ::::  -->
+                <!-- PORTAL -->
+                <dxi-item>
+                    <dxi-location screen="md lg" [row]="0" [col]="0"></dxi-location>
+                    <dxi-location style="margin-top: 1rem" screen="xs sm" [row]="10" [col]="0" [colspan]="12"></dxi-location>
+                    <div>Tipo:</div>
+                </dxi-item>
+        
+                <dxi-item>
+                    <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
+                    <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
+                    <dx-select-box [items]="tipoUsuario" displayExpr="tipousuario" valueExpr="id" (onValueChanged)="selectPortal($event)">
+                    </dx-select-box>
+                </dxi-item>
+                <!-- BUSCAR -->
+                <dxi-item>
+                    <dxi-location screen="md lg" [row]="0" [col]="6"></dxi-location>
+                    <dxi-location style="margin-top: .20rem" screen="xs sm" [row]="12" [col]="0" [colspan]="12"></dxi-location>
+                    <div>
+                        <dx-button stylingMode="contained" text="Buscar" icon="search" type="normal" [width]="120">
+                        </dx-button>
+                    </div>
+                </dxi-item>
+                <!--#endregion :::: FIN ROW 1 ::::  -->
+            </dx-responsive-box>
+            <br><br>
+        
+            <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridUsuario" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
+                <dxo-scrolling mode="virtual"></dxo-scrolling>
+                <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping> 
+                
+                <dxi-column dataField="" caption="Aplicativo" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column dataField="" caption="pantalla" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column dataField="" caption="Opción" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
                     
                 <div *dxTemplate="let data of 'headerTemplate'">
                     <div style="font-weight: bolder; color: black">
