--- a/src/app/pages/balanza/balanza.component.html
+++ b/src/app/pages/balanza/balanza.component.html
@@ -117,7 +117,7 @@
         <dxi-item>
             <dxi-location screen="md lg" [row]="0" [col]="13"></dxi-location>
             <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="1" [col]="0" [colspan]="12"></dxi-location>
-            <dx-select-box [items]="centroCostos" displayExpr="clasificacion" valueExpr="clasificacion" (onValueChanged)="selectCostos($event)">
+            <dx-select-box [items]="centroCostos" displayExpr="cc" valueExpr="id" (onValueChanged)="selectCostos($event)">
             </dx-select-box>
         </dxi-item>
         <!-- BUSCAR -->
@@ -135,10 +135,22 @@
 
 
     <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridBalanza" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
-        <dxo-scrolling mode="virtual"></dxo-scrolling>
-        <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping>
         
-    
+        <dxi-column dataField="abonos" caption="Abonos" [fixed]="true"></dxi-column>
+        <dxi-column dataField="afectable" caption="Afectable" [fixed]="true"></dxi-column>
+        <dxi-column dataField="cargos" caption="Cargos" [fixed]="true"></dxi-column>
+        <dxi-column dataField="cc" caption="Centro de Costos" [fixed]="true"></dxi-column>
+        <dxi-column dataField="compania" caption="Compañia" [fixed]="true"></dxi-column>
+        <dxi-column dataField="cuenta" caption="Cuenta" [fixed]="true"></dxi-column>
+        <dxi-column dataField="descripcion" caption="Descripción" [fixed]="true"></dxi-column>
+        <dxi-column dataField="naturaleza" caption="Naturaleza" [fixed]="true"></dxi-column>
+        <dxi-column dataField="saldoFinal" caption="Saldo Final" [fixed]="true"></dxi-column>
+        <dxi-column dataField="saldoInicial" caption="Saldo Inicial" [fixed]="true"></dxi-column>
+        <dxi-column dataField="udn" caption="Unidad de Negocio" [fixed]="true"></dxi-column>
+        
+        <dxo-group-panel [visible]="false"></dxo-group-panel>
+        <dxo-grouping #expand [autoExpandAll]="true"></dxo-grouping>
+
     <dxi-column dataField="" caption="Grid datos" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <div *dxTemplate="let data of 'headerTemplate'">
             <div style="font-weight: bolder; color: black">
@@ -153,9 +165,11 @@
         <div *dxTemplate="let d of 'diffCellTemplate'" [class]="d.text >= 0 ? 'inc' : 'dec'">
         <div class="diff"></div>
     </div>
-        <dxo-export [enabled]="true" fileName="TPS-Global"></dxo-export>
-        <dxo-paging [pageSize]="100"></dxo-paging>
-        <dxo-sorting mode="none"></dxo-sorting>
+    <dxo-export [enabled]="true"></dxo-export>
+    <dxo-paging [pageSize]="10"></dxo-paging>
+    <dxo-pager [visible]="true" [allowedPageSizes]="allowedPageSizes" displayMode="full" [showPageSizeSelector]="true" [showInfo]="true" [showNavigationButtons]="true">
+    </dxo-pager>
+    <dxo-sorting mode="none"></dxo-sorting>
     </dx-data-grid>
 
 
