--- a/src/app/pages/balanza/balanza.component.html
+++ b/src/app/pages/balanza/balanza.component.html
@@ -136,22 +136,25 @@
 
     <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridBalanza" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
         
-        <dxi-column dataField="abonos" caption="Abonos" [fixed]="true"></dxi-column>
-        <dxi-column dataField="afectable" caption="Afectable" [fixed]="true"></dxi-column>
-        <dxi-column dataField="cargos" caption="Cargos" [fixed]="true"></dxi-column>
-        <dxi-column dataField="cc" caption="Centro de Costos" [fixed]="true"></dxi-column>
         <dxi-column dataField="compania" caption="Compañia" [fixed]="true"></dxi-column>
+        <dxi-column dataField="udn" caption="Unidad de Negocio" [fixed]="true"></dxi-column>
+        <dxi-column dataField="cc" caption="Centro de Costos" [fixed]="true"></dxi-column>
         <dxi-column dataField="cuenta" caption="Cuenta" [fixed]="true"></dxi-column>
         <dxi-column dataField="descripcion" caption="Descripción" [fixed]="true"></dxi-column>
         <dxi-column dataField="naturaleza" caption="Naturaleza" [fixed]="true"></dxi-column>
-        <dxi-column dataField="saldoFinal" caption="Saldo Final" [fixed]="true"></dxi-column>
+        <dxi-column dataField="afectable" caption="Afectable" [fixed]="true"></dxi-column>
         <dxi-column dataField="saldoInicial" caption="Saldo Inicial" [fixed]="true"></dxi-column>
-        <dxi-column dataField="udn" caption="Unidad de Negocio" [fixed]="true"></dxi-column>
+        <dxi-column dataField="cargos" caption="Cargos" [fixed]="true"></dxi-column>
+        <dxi-column dataField="abonos" caption="Abonos" [fixed]="true"></dxi-column>
+        <dxi-column dataField="saldoFinal" caption="Saldo Final" [fixed]="true"></dxi-column>
+        <dxi-column caption="Detalles" headerCellTemplate="headerTemplate" type="buttons" [width]="60">
+            <dxi-button hint="Clone" icon="copy" [onClick]="verDetallesClick"></dxi-button>
+        </dxi-column>
+
         
         <dxo-group-panel [visible]="false"></dxo-group-panel>
         <dxo-grouping #expand [autoExpandAll]="true"></dxo-grouping>
 
-    <dxi-column dataField="" caption="Grid datos" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <div *dxTemplate="let data of 'headerTemplate'">
             <div style="font-weight: bolder; color: black">
                 {{ data.column.caption }}
@@ -172,11 +175,49 @@
     <dxo-sorting mode="none"></dxo-sorting>
     </dx-data-grid>
 
-
-
-
-
    
+    <!--==========================MODAL DETALLE=========================================================-->
+<dx-popup
+width="99%" [height]="400" [showTitle]="true" title="Detalle Balanza" [dragEnabled]="false" [closeOnOutsideClick]="true"
+[showCloseButton]="true" container=".dx-viewport" [(visible)]="modDetalle">
+<dxo-position at="middle" my="center" [of]="positionOf"> </dxo-position>
+<div *dxTemplate="let data of 'content'">
+  <!--#region :::: GRID DETALLE DE REAL ::::  -->
+  <dx-data-grid #rentGer id="gridContainer" [dataSource]="gridDetalle" [columnAutoWidth]="true" [showColumnLines]="true"
+    [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPreparedDetalle($event)">
+    
+    <dxi-column dataField="" caption="Detalle" headerCellTemplate="headerTemplate"></dxi-column>
+  
+  <!-- Templates Grid -->
+    <div *dxTemplate="let data of 'headerTemplate'">
+      <div style="font-weight: bolder; color: black">
+        {{ data.column.caption }}
+      </div>
+    </div>
+
+    <div *dxTemplate="let info of 'titleHeaderTemplate'">
+      <div style="font-weight: bolder; color: #ff5722">
+        {{ info.column.caption }}
+      </div>
+    </div>
+
+    <div
+      *dxTemplate="let d of 'diffCellTemplate'"
+      [class]="d.text >= 0 ? 'inc' : 'dec'"
+    >
+      <div class="diff"></div>
+    </div>
+
+    <dxo-export [enabled]="true"></dxo-export>
+    <dxo-paging [pageSize]="10"></dxo-paging>
+    <dxo-sorting mode="none"></dxo-sorting>
+  </dx-data-grid>
+
+</div>
+</dx-popup>
+<!--=============================================FIN MODAL==========================================-->
+
+
     <!-- LOAD PANEL -->
     <dx-load-panel #loadPanel shadingColor="rgba(0,0,0,0.4)" [position]="{ of: '#rentCont2' }" [(visible)]="loadingVisible" [showIndicator]="true" [showPane]="true" [shading]="true" [closeOnOutsideClick]="false">
     </dx-load-panel>
